--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y --no-install-recommends install \
                build-essential \
-               libhidapi-libusb-dev
+               libhidapi-dev
       - name: clean
         run: make clean
       - name: make
