--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
     - cron:  '0 0 * * *'
 
 jobs:
-  test:
-    name: build
+  ubuntu:
+    name: ubuntu
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -23,4 +23,15 @@ jobs:
         run: make clean
       - name: make
         run: make
-
+  macos:
+    name: macos
+    runs-on: macos-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@master
+      - name: brew bundle
+        run: brew bundle
+      - name: clean
+        run: make clean
+      - name: make
+        run: make
